# apecx-harvesters

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
design/: API_COMPLIANCE.md  API_REFERENCE.md  OPEN_QUESTIONS.md
scripts/: ingest_gsearch.sh
search_demo/: INSTRUCTIONS.md
search_demo/agent-skill/: SKILL.md
search_demo/agent-skill/references/: query-api.md
search_demo/agent-skill/scripts/: fetch.py
search_demo/data/: apecx-areas.txt  mu-virus-list.txt
search_demo/schema/: full_schema.json  simplified_schema.json
src/apecx_harvesters/loaders/: __init__.py
src/apecx_harvesters/loaders/base/: __init__.py  http_retry.py  model.py  parser.py  rate_limit.py  registry.py  retrieve.py
src/apecx_harvesters/loaders/biorxiv/: constants.py  model.py  parser.py  retrieve.py
src/apecx_harvesters/loaders/crossref/: constants.py  parser.py  retrieve.py
src/apecx_harvesters/loaders/datacite/: __init__.py  constants.py  parser.py  retrieve.py
src/apecx_harvesters/loaders/doi/: __init__.py  constants.py  retrieve.py
src/apecx_harvesters/loaders/emdb/: constants.py  model.py  parser.py  retrieve.py  search.py
src/apecx_harvesters/loaders/openalex/: constants.py  parser.py  retrieve.py
src/apecx_harvesters/loaders/pdb/: constants.py  model.py  parser.py  retrieve.py  search.py
src/apecx_harvesters/loaders/pubmed/: constants.py  model.py  parser.py  retrieve.py  search.py
src/apecx_harvesters/pipeline/: __init__.py  run.py  sinks.py  sources.py
src/apecx_harvesters/scripts/: __init__.py  aggregate_gsearch.py  search_author.py  search_topic.py
src/apecx_harvesters/workers/: __init__.py  consumer.py  producer.py
tests/: test_base_parsers.py  test_base_retrieve.py  test_base_schema.py  test_biorxiv.py  test_crossref.py  test_datacite.py  test_doi.py  test_download_worker.py  test_emdb.py  test_openalex.py  test_pdb.py  test_pipeline.py  test_pubmed.py  test_pubmed_search.py  test_rate_limiter.py  test_registry.py
tests/fixtures/: crossref_10.1101_2020.09.09.20191205.json  crossref_10.1128_mbio.01735-25.json  crossref_batch.json  datacite_10.14454_qdd3-ps68.json  datacite_10.5281_zenodo.7635478.json  datacite_10.82433_9184-dy35.json  datacite_10.82433_q54d-pf76.json  emdb_EMD-74041.json  emdb_batch_EMD-1000_EMD-74041.json  medrxiv_2020.09.09.20191205.json  openalex_10.1038_s41467-021-21317-x.json  openalex_batch.json  pdb_1omw.json  pdb_graphql_1omw.json  pdb_graphql_4zt0.json  pdb_graphql_6m0j.json  pmc_PMC7887212_abstract.xml  pubmed_32672655.xml  pubmed_33594067.xml  pubmed_batch_33594067_32672655.xml  pubmed_efetch_21413253.xml
